# data-dict-backend

./: .env_tem  .gitignore  Cargo.toml  init.sql
model/: README.md
qdrant/: config.yaml
src/: main.rs
src/handlers/: auth_handler.rs  field_handler.rs  mapping_handler.rs  mod.rs  task_handler.rs  word_root_handler.rs
src/models/: field.rs  mod.rs  word_root.rs
src/services/: mapping_service.rs  mod.rs
