[package]
name = "data-dict-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# 序列化/工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 业务逻辑
jieba-rs = "0.6"
once_cell = "1.18"

argon2 = "0.5"      # 现代密码哈希算法
jsonwebtoken = "9"   # JWT 处理
axum-extra = { version = "0.9", features = ["typed-header"] } # 用于提取 Bearer Token
rand_core = "0.9.5"
rand = "0.8"
qdrant-client = "1.10" # Qdrant 官方客户端
fastembed = "5.8.1"         # 纯 Rust 实现的向量嵌入引擎